--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".RerollActivity"></activity>
+        <activity android:name=".CameraScanActivity"></activity>
+        <activity android:name=".RerollActivity" />
         <activity android:name=".SampleInfoActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
